pad it out with a few bits of practical data & analysis

--- a/mappings/az_tender.yaml
+++ b/mappings/az_tender.yaml
@@ -6,7 +6,7 @@ nodes:
     properties:
       actorName:
         column: supplier
-      fingerPrint:
+      fingerprint:
         column: supplier
         transform: fingerprint
         key: true
@@ -17,7 +17,7 @@ nodes:
     properties:
       actorName:
         column: authority
-      fingerPrint:
+      fingerprint:
         column: authority
         transform: fingerprint
         key: true
