--- a/mappings/gb_land_registry.yaml
+++ b/mappings/gb_land_registry.yaml
@@ -13,10 +13,14 @@ nodes:
         transform: fingerprint
         key: true
   property:
-    label: Asset
+    label: RealEstate
     properties:
       assetName:
         column: Title_Number
+      assetDescription:
+        column: Property_Address
+      assetType:
+        literal: "Real estate"
       fingerprint:
         column: Title_Number
         key: true
