--- a/mappings/ss_exploration_licenses.yaml
+++ b/mappings/ss_exploration_licenses.yaml
@@ -4,7 +4,7 @@ nodes:
   holder:
     label: Actor
     properties:
-      actorName:
+      name:
         column: parties
       fingerprint:
         column: parties
@@ -13,51 +13,43 @@ nodes:
   concession:
     label: Concession
     properties:
-      assetName:
+      name:
         column: code
-      assetDescription:
+      description:
         column: name
-      concessionCommodities:
+      commodities:
         column: commodities
       concessionArea:
         column: area
       fingerprint:
         format: "%(source_url)s//%(code)s"
         key: true
+      countryCode:
+        column: source_name
   concessionLocation:
     label: Address
     properties:
-      address:
+      name:
         column: mapref
       fingerprint:
         column: mapref
-        transform: fingerprint
+        transform: addressfp
         key: true
-  country:
-    label: Country
-    properties:
       countryCode:
         column: source_name
-        key: true
 edges:
-  - label: HAS_RIGHTS
-    source: holder
-    target: concession
+  - label: OWNED_BY
+    source: concession
+    target: holder
     properties:
-      rightType:
+      type:
         column: type
       legalBasis:
         column: jurisdic
-      rightStatus:
+      status:
         column: status
       applicationDate:
         column: dteapplied
   - label: LOCATED_AT
     source: concession
     target: concessionLocation
-  - label: LOCATED_IN
-    source: concession
-    target: country
-  - label: LOCATED_IN
-    source: concessionLocation
-    target: country
