--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 Flask==0.11.1
 Flask-Script==2.0.5
 Flask-Mail==0.9.1
+Flask-Assets==0.12
 sqlalchemy
 psycopg2
 https://github.com/pudo/fingerprints/tarball/master
@@ -11,3 +12,4 @@ flanker
 phonenumbers
 elasticsearch==2.3.0
 unidecode
+cssutils
