--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ Flask==0.11.1
 Flask-Script==2.0.5
 Flask-Mail==0.9.1
 Flask-Assets==0.12
+Flask-OAuthlib==0.9.3
 sqlalchemy
 psycopg2
 https://github.com/pudo/fingerprints/tarball/master
